Align the currency symbol with the text input - No other way than make the currency symbol an input too for perfect alignment - Doesn't work so well for IE8 and IE11, and IE8 prevents making the pound sign black

--- a/mtp_send_money/assets-src/stylesheets/app.scss
+++ b/mtp_send_money/assets-src/stylesheets/app.scss
@@ -44,21 +44,20 @@ form .form-group .form-hint {
 
     .money-box {
       * {
-        height: 40px;
+        height: 34px;
         display: inline-block;
         vertical-align: bottom;
       }
-      div.form-control {
-        width: 2em;
-        min-width: 2em;
-        border-right: 0;
-        line-height: 1;
-        background-color: $panel-colour;
-        text-align: center;
-        font-size: 120%;
+      .mtp-currency-sign {
+        background-color: $highlight-colour;
         font-weight: 900;
+        min-width: 1.8em;
+        width: 1.8em;
+        text-align: center;
+        border-right: 0;
+        color: $text-colour;
       }
-      input {
+      .mtp-charges-amount {
         width: 5em;
       }
     }
